# geti

./: CONTRIBUTING.md  Makefile  Makefile.build  Makefile.shared  Makefile.shared-go  Makefile.shared-python  README.md  third-party-programs.txt
platform/services/installer/: Dockerfile  Makefile  pyproject.toml
platform/services/installer/app/: platform_installer.py  system-packages.yaml  version.yaml
platform/services/installer/app/checks/: __init__.py  dns.py  errors.py  internet.py  k3s.py  k8s.py  os.py  platform.py  ports.py  resources.py  tools.py  user.py
platform/services/installer/app/cli_utils/: checks.py  credentials.py  platform_logs.py  prompts.py  spinner.py
platform/services/installer/app/commands/: install.py  uninstall.py  upgrade.py  version.py
platform/services/installer/app/configuration_models/: base_config_model.py  install_config.py  uninstall_config.py  upgrade_config.py
platform/services/installer/app/constants/: charts.py  feature_flags.py  k3s.py  operations.py  os.py  paths.py  platform.py
platform/services/installer/app/k3s/: config.py  detect_ip.py  detect_k3s.py  detect_selinux.py  install.py  uninstall.py
platform/services/installer/app/platform_configuration/: errors.py  features.py  platform.py  versions.py
platform/services/installer/app/platform_stages/: install.py  upgrade.py
platform/services/installer/app/platform_stages/steps/: configure_gpu.py  copy_platform_charts.py  (+23 more)
platform/services/installer/app/platform_utils/: calculate_resource_multiplier.py  grafana.py  helm.py  k8s.py  kube_config_handler.py  scale_helm_chart_resources.py
platform/services/installer/app/templates/: cert-manager-values.yaml.j2  control-plane-values.yaml.j2  impt-values.yaml.j2  intel-device-plugin.yaml.j2  istio-cni-values.yaml.j2  istio-istiod-values.yaml.j2  istio-ztunnel-values.yaml.j2  reloader-values.yaml.j2  seaweed-values.yaml.j2
platform/services/installer/app/texts/: checks.py  error_messages.py  install_command.py  uninstall_command.py  upgrade_command.py  validators.py
platform/services/installer/app/validators/: domain.py  email.py  errors.py  filepath.py  mailserver.py  password.py  path.py
platform/services/installer/tests/: mock_k8s.py
platform/services/installer/tools/: change_password.py  jobs_logs.sh
(+2709 files in other folders)
